--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.linzg.www.androidinternet.activity.ChatActivity">
+    tools:context=".talking.activity.ChatActivity">
     <LinearLayout
         android:id="@+id/shang"
         android:layout_width="match_parent"
