--- a/app/src/main/res/layout/activity_perpare.xml
+++ b/app/src/main/res/layout/activity_perpare.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/baseLayout"
-    android:background="@color/perpareBack"
+    android:background="@null"
     android:focusable="true"
     android:focusableInTouchMode="true">
     <LinearLayout
