update:兴趣组详情页

--- a/app/src/main/res/layout/activity_near_by.xml
+++ b/app/src/main/res/layout/activity_near_by.xml
@@ -30,11 +30,12 @@
         android:id="@+id/createItem"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:background="@color/arc1"
+        android:background="@drawable/shape_solid_radius100_blue"
         android:text="我要建组>>"
         android:gravity="center"
         android:textSize="12sp"
-        android:layout_marginRight="110dp"
+        android:textColor="@color/white"
+        android:layout_marginRight="100dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/location"
         app:layout_constraintRight_toRightOf="parent" />
