--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -12,10 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:gravity="center_vertical"
-        android:textSize="18dp"
+        android:textSize="20dp"
         android:textColor="@color/black"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         android:text="一点羽毛球小分队"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -41,13 +42,17 @@
 
     <TextView
         android:id="@+id/join_group"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:background="@drawable/shape_solid_radius100_blue"
         android:gravity="center"
         android:textSize="16dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:text="加入小组"
+        android:layout_marginBottom="@dimen/dp_20"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <android.support.v7.widget.RecyclerView
