--- a/app/src/main/res/layout/activity_detail1.xml
+++ b/app/src/main/res/layout/activity_detail1.xml
@@ -13,14 +13,14 @@
         <RelativeLayout
             android:id="@+id/rl_title"
             android:layout_width="match_parent"
-            android:layout_height="44dp">
-
+            android:layout_height="30dp">
             <ImageView
                 android:id="@+id/iv_back"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:scaleType="center"
-                android:src="@drawable/wb_back_btn" />
+                android:layout_marginLeft="@dimen/dp_20"
+                android:src="@drawable/icon_pic_back_ns" />
 
             <TextView
                 android:id="@+id/tv_title"
@@ -32,7 +32,7 @@
                 android:ellipsize="end"
                 android:gravity="center"
                 android:singleLine="true"
-                android:text="详情"
+                android:text="活动详情"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
 
