--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="color_fff">#ffffff</color>
     <color name="color_D79E4B">#D79E4B</color>
     <color name="color_F19220">#F19220</color>
+    <color name="color_f7f7f7">#f7f7f7</color>
     <color name="color_2427">#242427</color>
     <color name="color_55">#555555</color>
     <color name="color_f9">#f9f9f9</color>
