--- a/app/src/main/res/drawable/shape_solid_radius100_blue.xml
+++ b/app/src/main/res/drawable/shape_solid_radius100_blue.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="100dp" />
-    <solid android:color="#1f73b3" />
+    <solid android:color="#50c293" />
 </shape>
