--- a/app/src/main/res/drawable/shape_solid_radius20_blue.xml
+++ b/app/src/main/res/drawable/shape_solid_radius20_blue.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp" />
-    <solid android:color="#1A129aee" />
+    <solid android:color="#50c293" />
 </shape>
