--- a/app/src/main/res/layout/activity_create_group_item.xml
+++ b/app/src/main/res/layout/activity_create_group_item.xml
@@ -34,6 +34,7 @@
         android:layout_width="260dp"
         android:layout_height="@dimen/dp_40"
         android:layout_marginTop="80dp"
+        android:layout_marginRight="15dp"
         android:background="@drawable/shape_stroke_radius12_gray_color"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -55,6 +56,7 @@
         android:layout_height="300dp"
         android:layout_marginTop="40dp"
         android:gravity="top"
+        android:layout_marginRight="15dp"
         android:background="@drawable/shape_stroke_radius12_gray_color"
         app:layout_constraintTop_toBottomOf="@id/group_name"
         app:layout_constraintRight_toRightOf="parent" />
