--- a/app/src/main/res/layout/activity_detail1.xml
+++ b/app/src/main/res/layout/activity_detail1.xml
@@ -13,12 +13,13 @@
         <RelativeLayout
             android:id="@+id/rl_title"
             android:layout_width="match_parent"
-            android:layout_height="30dp">
+            android:layout_height="44dp">
             <ImageView
                 android:id="@+id/iv_back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:scaleType="center"
+                android:scaleType="centerInside"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/dp_20"
                 android:src="@drawable/icon_pic_back_ns" />
 
