--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:layout_height="@dimen/dp_40">
+    android:layout_height="50dp">
 
     <TextView
         android:id="@+id/item_name"
