--- a/app/src/main/res/layout/activity_near_by.xml
+++ b/app/src/main/res/layout/activity_near_by.xml
@@ -9,10 +9,13 @@
 
     <ImageView
         android:id="@+id/back"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:padding="7dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/circle_back"
+        android:scaleType="fitCenter"
         android:src="@drawable/back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
