--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     tools:context=".coding.activity.GroupDetailActivity">
 
     <TextView
@@ -17,6 +18,8 @@
         android:textStyle="bold"
         android:text="一点羽毛球小分队"
         android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:background="@drawable/recycle_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,6 +31,8 @@
         android:textSize="16dp"
         android:textStyle="bold|italic"
         android:layout_marginTop="@dimen/dp_20"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="一点羽毛球小分队详情：\n详情\n详情"
         android:background="@drawable/recycle_bg"
         app:layout_constraintTop_toBottomOf="@id/group_name" />
@@ -39,6 +44,8 @@
         tools:ignore="MissingConstraints"
         android:layout_marginTop="@dimen/dp_20"
         android:background="@drawable/recycle_bg"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintTop_toBottomOf="@id/description"
         >
 
