--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -8,6 +8,17 @@
     android:paddingRight="15dp"
     tools:context=".coding.activity.GroupDetailActivity">
 
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleType="centerInside"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/icon_pic_back_ns"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
     <TextView
         android:id="@+id/group_name"
         android:layout_width="match_parent"
@@ -17,11 +28,10 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:text="一点羽毛球小分队"
+        android:padding="10dp"
         android:layout_marginTop="20dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:background="@drawable/recycle_bg"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/back" />
 
     <TextView
         android:id="@+id/description"
@@ -29,12 +39,10 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:textSize="16dp"
-        android:textColor="#666"
+        android:textStyle="bold|italic"
+        android:padding="10dp"
         android:layout_marginTop="@dimen/dp_20"
-        android:lines="3"
-        android:text="详情介绍"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:text="一点羽毛球小分队详情：\n详情\n详情"
         android:background="@drawable/recycle_bg"
         app:layout_constraintTop_toBottomOf="@id/group_name" />
 
@@ -42,12 +50,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:padding="10dp"
         tools:ignore="MissingConstraints"
-        android:padding="5dp"
         android:layout_marginTop="@dimen/dp_20"
         android:background="@drawable/recycle_bg"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         app:layout_constraintTop_toBottomOf="@id/description"
         >
 
@@ -62,12 +68,6 @@
             android:text="活动列表："
              />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:background="#f7f7f7"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/item_list"
             android:layout_width="match_parent"
