--- a/app/src/main/res/layout/fragment_publish.xml
+++ b/app/src/main/res/layout/fragment_publish.xml
@@ -25,7 +25,7 @@
                     android:text="活动名称"
                     android:textSize="15sp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/etpoduct_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:text="活动地点："
                     android:textSize="15sp" />
-                <EditText
+                <TextView
                     android:id="@+id/address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
                     android:text="活动时间："
                     android:textSize="15sp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
                     android:text="活动人数："
                     android:textSize="15sp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/phone_num"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -92,37 +92,23 @@
                     android:text="剩余名额:"
                     android:textSize="15sp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/button_sub_num"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:singleLine="true" />
             </TableRow>
-            <TableRow android:padding="12dp">
-
-<!--                <Button-->
-<!--                    android:id="@+id/button_select_picture"-->
-<!--                    style="?android:textAppearanceSmall"-->
-<!--                    android:layout_width="120dp"-->
-<!--                    android:layout_height="60dp"-->
-<!--                    android:layout_marginTop="3dp"-->
-<!--                    android:layout_marginRight="10dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:text="视图冲击"-->
-<!--                    android:textStyle="bold" />-->
-
-                <ImageView
-                    android:id="@+id/imageview_select_publish"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="3dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@android:drawable/screen_background_light_transparent" />
-            </TableRow>
 
 
+            <ImageView
+                android:id="@+id/imageview_select_publish"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="3dp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"
+                android:src="@android:drawable/screen_background_light_transparent" />
 
             <ProgressBar
                 android:id="@+id/mProgess"
